<resources>
    <string name="app_name">Messmart</string>
    <string name="spinner_title">Select region</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_choosefood">ChoosefoodActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_payment">Payment</string>
    <string name="otpOrPassword">OTP or Password</string>
    <string name="login">Login</string>
    <string name="importtext">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="home">Home</string>
    <string name="todo">ToDo</string>
    <string name="newtext">New Text</string>
    <string name="name">Name</string>
    <string name="createaccount">Create Account</string>
    <string name="phone">Phone</string>
    <string name="orderfor18thmay">order for may 18</string>
    <string name="studentsignup">Student Signup</string>
    <string name="noorders">No Orders</string>
    <string name="loadingpleasewait">Loading..... Please wait</string>
    <string name="changepassword">Change Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="address">Address</string>
    <string name="editprofile">Edit Profile</string>
    <string name="aboutustext">you have to get content from api using post request.</string>
    <string name="ourcore">Our Core m</string>
    <string name="dishname">dish name</string>
    <string name="mail">Mail:</string>
    <string name="getpassword">Get Password</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="emailid">Email Id</string>
    <string name="choosepassword">Choose a Password</string>
    <string name="anythingelse">Anything else ?</string>
    <string name="submit">Submit</string>
    <string name="newmobile">Enter New Mobile no.</string>
    <string name="sendotp">Send OTP</string>
    <string name="alreadyhaveaaccount">Already have an account?</string>
    <string name="resend">Re-send</string>
    <string name="enterotp">Enter OTP</string>
    <string name="confirm">Confirm</string>
    <string name="lunch">Lunch</string>
    <string name="oid">OID</string>
    <string name="dish">Dish</string>
    <string name="mess">Mess</string>
    <string name="price">Price</string>
    <string name="status">Status</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="call">Call:</string>
    <string name="mobileno">Mobile No.</string>
    <string name="welcometomessmart">Welcome to mesSmart</string>
    <string name="a_place_where_you_choose_what_to_eat">A place, where you can choose what to eat</string>
    <string name="book_meal">Book Meal</string>
    <string name="how_it_works">HOW IT WORKS</string>
    <string name="you_book_a_meal">You Book A Meal</string>
    <string name="you_visit_messmart_and_find_meal">You visit messmart.com and find the best mess</string>
    <string name="chef_cooks">Chef Cooks</string>
    <string name="our_awesome_chef_cooks_delicacy">Our Awesome Chef cooks delicacy from her home kitchen for you</string>
    <string name="daily_home_delivery">Daily Home Delivery</string>
    <string name="we_do_lightening_home_delivery_in_slot_chosen">We do lightning daily delivery in the slot you have selected</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="about_mess">About Mess</string>
    <string name="lunch_timing">Lunch Timing</string>
    <string name="dinner_timing">Dinner Timing</string>
    <string name="dishes_for_the_week">Dishes for this week</string>
    <string name="the_end">The End</string>
    <string name="cost">234</string>
    <string name="booknow">Book Now</string>
    <string name="dinner">Dinner</string>
    <string name="mobileno7503759059">7503759059</string>
    <string name="donthaveanaccount">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="areumess">Are you a mess?</string>
    <string name="joinus">JoinUs</string>
    <string name="forgotyourpassword">Forgot your password ?</string>
    <string name="resetpassword">Reset Password</string>
    <string name="passwordresetinstruction">\nYou will get a temporary password. Use that password for login and change it.</string>
    <string name="newpassword">New Password</string>
    <string name="repeatnewpassword">Repeat New Password</string>
    <string name="showpassword">Show Password</string>
    <string name="change">Change</string>
    <string name="loginpassword">oo</string>
    <string name="useraddress">Address:-</string>
    <string name="messname">mess name</string>
    <string name="book">Book</string>
    <string name="description">Newnklllllllllllllllllllllllllllllllllllll llllllllllllllllllllkllllllllllllll Text</string>
    <string name="foodtiming">deswdsw</string>

</resources>
