<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".Fragment.LoginActivity"
    android:id="@+id/activity_forgot_password"
    android:background="@color/white">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_mob"
        android:hint="@string/phone"
        android:background="@color/edittextbackground"
        android:padding="10dp"
        android:inputType="number"
        android:maxLength="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp"
        android:drawablePadding="10dp"
        android:drawableLeft="@android:drawable/sym_action_call"
        android:textCursorDrawable="@drawable/custom_cursor"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/getpassword"
        android:textAllCaps="false"
        android:id="@+id/forgot_password_button"
        android:background="@drawable/buttonshape"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:drawableRight="@drawable/send_icon"
        android:paddingRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/forgot_mob"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        android:id="@+id/login_link"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/forgot_password_button"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/resetpassword"
        android:id="@+id/textView21"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordresetinstruction"
        android:id="@+id/textView22"
        android:layout_below="@+id/textView21"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
