<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".Fragment.LoginActivity"
    android:background="@color/white"
    android:id="@+id/activity_sign_up">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/studentsignup"
        android:id="@+id/textView21"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="10"
        android:background="@color/edittextbackground"
        android:padding="10dp"
        android:id="@+id/newmob"
        android:hint="@string/newmobile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:drawablePadding="10dp"
        android:drawableLeft="@android:drawable/sym_action_call"
        android:textCursorDrawable="@drawable/custom_cursor"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/sendotp"
        android:textAllCaps="false"
        android:id="@+id/sendotp"
        android:background="@drawable/buttonshape"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:layout_gravity="center_horizontal"
        android:drawableRight="@android:drawable/sym_call_incoming"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alreadyhaveaaccount"
        android:id="@+id/alreadyText"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/already"
        android:textSize="18sp"/>
    </LinearLayout>
    </LinearLayout>
    </ScrollView>

</RelativeLayout>
