<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:id="@+id/messimg"
            android:src="@drawable/food3"
            android:scaleType="fitXY"
            android:layout_alignParentTop="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/dishname"
            android:layout_alignLeft="@+id/messimg"
            android:includeFontPadding="false"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignTop="@+id/imgveg"
            android:layout_toLeftOf="@+id/price"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textSize="20dp"
            android:id="@+id/price"
            android:drawableLeft="@drawable/ir30"
            android:drawablePadding="-2dp"
            android:layout_alignRight="@+id/imgveg"
            android:layout_below="@+id/messimg"
            android:layout_marginRight="30dp"
            android:paddingRight="10dp"
            android:layout_alignTop="@+id/title"
            android:layout_alignBaseline="@+id/title"
            />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/imgveg"
            android:layout_marginRight="10dp"
            android:src="@drawable/veg"
            android:layout_alignRight="@+id/messimg"
            android:layout_below="@+id/messimg"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitCenter"
            android:paddingTop="1dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:adjustViewBounds="true"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/messmakername"
            android:text="@string/messname"
            android:layout_below="@+id/title"
            android:layout_alignBaseline="@+id/bookbutton"
            android:textColor="@color/linktextcolor"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:layout_marginLeft="10dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:layout_toLeftOf="@+id/bookbutton"
            android:layout_toStartOf="@+id/bookbutton"
            android:layout_toEndOf="@+id/messmakerlogo"
            android:layout_toRightOf="@+id/messmakerlogo"/>

        <com.ashleyjain.messmart.function.RoundedImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/messmakerlogo"
            android:layout_below="@+id/price"
            android:src="@drawable/google_icon"
            android:layout_alignLeft="@+id/messimg"
            android:layout_marginLeft="10dp"
            android:layout_alignTop="@+id/messmakername"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:textColor="@color/white"
            android:background="@drawable/bookbutton"
            android:text="@string/book"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:id="@+id/bookbutton"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignRight="@+id/messimg"
            android:layout_below="@+id/price"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:padding="10dp"
            android:layout_below="@+id/messmakerlogo"
            android:id="@+id/description"/>



    </RelativeLayout>

</android.support.v7.widget.CardView>