<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/websitebackground"
    android:id="@+id/card_view"
    android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true"
            android:text="@string/orderfor18thmay"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/twocards"
            android:layout_below="@id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

        <android.support.v7.widget.CardView
            android:id="@+id/card_sub_view"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="2dp"
            android:padding="10dp"
            android:layout_weight="0.5"
            android:layout_margin="5dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:id="@+id/lunch"
                android:text="@string/lunch"
                />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="horizontal"
                android:focusableInTouchMode="true"
                android:id="@+id/lunchde">



            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oid"
                    android:id="@+id/textView7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dish"
                    android:id="@+id/textView9" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mess"
                    android:id="@+id/textView14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:id="@+id/textView15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:id="@+id/textView16" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newtext"
                    android:id="@+id/oid" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newtext"
                    android:id="@+id/dish" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newtext"
                    android:id="@+id/mess" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newtext"
                    android:id="@+id/price" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/status"
                    android:text="@string/newtext" />


                <Button
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:id="@+id/lcancel"
                    android:textColor="@color/white"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:layout_margin="10dp"
                    android:background="@drawable/buttonshape"/>

            </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:id="@+id/lunchlinear"
                android:layout_below="@+id/lunch"
                android:layout_marginTop="10dp">

                <TextView
                    android:text="@string/booknow"
                    android:id="@+id/booknowl"
                    android:textColor="@color/linktextcolor"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:textAllCaps="false"
                    android:layout_centerHorizontal="true"
                    android:padding="2dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="20dp"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_sub_view2"
            android:layout_width="match_parent"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="2dp"
            android:padding="10dp"
            android:layout_weight="0.5"
            android:layout_margin="5dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textStyle="bold"
                android:id="@+id/dinner"
                android:text="@string/dinner"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="horizontal"
                android:id="@+id/dinnerde">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/oid"
                        android:id="@+id/textView12" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dish"
                        android:id="@+id/textView13" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mess"
                        android:id="@+id/textView17" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:id="@+id/textView18" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:id="@+id/textView19" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newtext"
                        android:id="@+id/oid2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newtext"
                        android:id="@+id/dish2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newtext"
                        android:id="@+id/mess2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newtext"
                        android:id="@+id/price2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newtext"
                        android:id="@+id/status2" />
                    <Button
                        android:layout_width="70dp"
                        android:layout_height="35dp"
                        android:id="@+id/dcancel"
                        android:textColor="@color/white"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:layout_margin="10dp"
                        android:background="@drawable/buttonshape"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/dinnerlinear"
                android:paddingTop="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/dinner">

                <TextView
                    android:text="@string/booknow"
                    android:id="@+id/booknowd"
                    android:textColor="@color/linktextcolor"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:textAllCaps="false"
                    android:layout_centerHorizontal="true"
                    android:padding="2dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="20dp"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    </RelativeLayout>
